--- a/src/components/ModernCarousel/ModernCarousel.css
+++ b/src/components/ModernCarousel/ModernCarousel.css
@@ -7,11 +7,11 @@
 
 .modern-carousel-header {
     text-align: center;
-    margin-bottom: 60px;
+    margin-bottom: 20px;
+    /* Reduced from 60px */
 }
 
 .modern-carousel-title {
-    font-size: 3rem;
     color: #000;
     /* Text black as requested */
     text-transform: uppercase;
@@ -32,7 +32,8 @@
 
 .modern-swiper {
     width: 100%;
-    padding-top: 50px;
+    padding-top: 20px;
+    /* Reduced from 50px */
     padding-bottom: 80px;
 }
 
